Hide dark button

--- a/docs/.vuepress/styles/palette.scss
+++ b/docs/.vuepress/styles/palette.scss
@@ -3,10 +3,8 @@
   --c-brand-light: #ec407a;
 }
 
-html.dark {
-  // brand colors
-  --c-brand: #e91e63;
-  --c-brand-light: #ec407a;
+.toggle-dark-button {
+  display: none;
 }
 
 .theme-container.theme-container--wide {
