--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -16,3 +16,19 @@
     max-width: 960px;
   }
 }
+
+.mb-0 {
+  margin-bottom: 0 !important;
+}
+
+.d-flex {
+  display: flex;
+}
+
+.align-center {
+  align-items: center !important;
+}
+
+.justify-space-between {
+  justify-content: space-between !important;
+}
