--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -17,6 +17,20 @@
   }
 }
 
+.spacer {
+  flex-grow: 1 !important;
+}
+
+.d-none {
+  display: none !important;
+}
+
+@media (min-width: 800px) {
+  .d-sm-block {
+    display: block !important;
+  }
+}
+
 .mb-0 {
   margin-bottom: 0 !important;
 }
