--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -5,6 +5,10 @@
     margin-bottom: 2rem;
   }
 
+  img {
+    border-radius: 8px;
+  }
+
   code {
     padding: 0.25rem;
     color: var(--c-text-light);
